# sweng894-capstone

./: .gitignore  README.md
.github/workflows/: gh_deployment.yaml  main.yml  unit-testing.yml
docs/architecture/: core-class-diagram.plantuml  sortofair.drawio
docs/architecutre/: core-class-diagram.plantuml  sortofair.drawio
eks/: add-pipeline-user-to-eks.sh  launch-cluter.sh  load_balancer.yaml
vote_system/: Dockerfile  conftest.py  db_credentials  kubernetes_deployment.yaml  pyproject.toml  secret_key
vote_system/app/: db_implementation.py  main.py  pyproject.toml
vote_system/app/core/: __init__.py  abstract_admin_api.py  abstract_api.py  abstract_data_access_layer.py  abstract_user_api.py  abstract_voter_api.py  admin_api.py  api_factory.py  base_api.py  basic_api.py  candidate.py  election.py  election_factory.py  models.py  user.py  user_api.py  user_factory.py  vote_sys.py  voter.py  voter_api.py
vote_system/app/presentation/: app.py  views.py
vote_system/app/presentation/static/js/: create_user.js  login.js  scripts.js
vote_system/app/presentation/templates/: add_candidate_to_election.html.jinja  admin_panel.html.jinja  create_election.html.jinja  create_new_user.html.jinja  elections.html.jinja  index.html.jinja  login.html  login.html.jinja  main.html  main.html.jinja  vote.html.jinja
vote_system/tests/integration/: test_admin_presentation.py  test_data_access_layer.py  test_general_presentation.py  test_voter_presentation.py
vote_system/tests/unit/: test_admin_api.py  test_voter_api.py
