[tool.poetry]
name = "app"
version = "0.1.0"
description = "An instant-runoff voting system"
authors = ["Joshua Schlichting <7680545+JoshuaSchlichting@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
loguru = "^0.5.3"
PyJWT = "^2.1.0"
black = "^21.5b2"
flake8 = "^3.9.2"
Flask-JWT-Extended = "^4.2.1"
Flask-Cors = "^3.0.10"
pymongo = {extras = ["srv"], version = "^3.12.0"}
pyrankvote = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
pytest-cov = "^2.12.1"
mongomock = "^3.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
