[tool.poetry]
name = "app"
version = "0.1.0"
description = "An instant-runoff voting system"
authors = ["Joshua Schlichting <7680545+JoshuaSchlichting@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
